fix($src): Fix footer on IE and refactoring code

--- a/src/less/blocks/about.less
+++ b/src/less/blocks/about.less
@@ -22,7 +22,7 @@
 	}
 }
 
-@media @tablet-widths {
+@media @desktop-widths {
 	.about__container {
 		padding-top: 200px;
 	}
