--- a/src/less/blocks/contact.less
+++ b/src/less/blocks/contact.less
@@ -1,12 +1,10 @@
 .contact {
 	flex-grow: 1;
-	box-shadow: 0 0 2px 0 #000;
-	position: relative;
-	z-index: 10;
 
 	&__container {
 		.container();
 		padding-top: 40px;
+		padding-bottom: 110px;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -194,7 +192,8 @@ label.error {
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: flex-start;
-		padding-top: 200px;
+		padding-top: 18.9vh;
+		padding-bottom: 25vh;
 	}
 	.contact__phone {
 		width: 35%;
