--- a/src/less/blocks/page-footer.less
+++ b/src/less/blocks/page-footer.less
@@ -1,15 +1,17 @@
 .page-footer {
-	position: relative;
-	bottom: 0;
-	width: 100%;
 	font-size: 10px;
 	background-color: @blueGrey;
+	position: absolute;
+	bottom: 0;
+	box-shadow: inset 0 0 2px 0 #000;
+	width: 100%;
 
 	&__container {
 		.container();
 		display: flex;
 		justify-content: flex-end;
 		flex-direction: column;
+		position: relative;
 	}
 
 	&__copyright {
