--- a/src/less/blocks/projects.less
+++ b/src/less/blocks/projects.less
@@ -1,28 +1,15 @@
 .projects {
 	flex-grow: 1;
-	box-shadow: 0 0 2px 0 #000;
-	position: relative;
-	z-index: 10;
 
 	&__container {
 		padding-top: 20px;
+		padding-bottom: 90px;
 		.container();
 	}
 
 	&__heading {
-		.container();
-		padding-bottom: 30px;
-		position: relative;
-
-		&::after {
-			position: absolute;
-			display: block;
-			content: '';
-			width: 100%;
-			bottom: 30px;
-			left: 0;
-			border-bottom: 1px dashed;
-		}
+		margin-bottom: 30px;
+		border-bottom: 1px dashed;
 	}
 
 	&__items {
@@ -39,8 +26,6 @@
 		flex-direction: column;
 		box-shadow: 0 1px 2px #000;
 		border-radius: 2px;
-		position: relative;
-		overflow: hidden;
 
 		&:active {
 			box-shadow: 0 1px 8px #000;
@@ -79,6 +64,10 @@
 }
 
 @media @tablet-widths {
+	.projects__container {
+		padding-bottom: 45px;
+	}
+
 	.projects__item {
 		width: 250px;
 	}
