--- a/src/less/global/scaffolding.less
+++ b/src/less/global/scaffolding.less
@@ -9,7 +9,8 @@ body {
 }
 
 html, body {
-	height: 100%;
+	min-height: 100vh;
+	position: relative;
 }
 
 ul {
